<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stoycho.norfa.fragments.LoginFragment"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/login_box_background"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_centerInParent="true"
            android:layout_above="@+id/password"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/password"
            android:maxLines="1"
            android:inputType="text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/loginPassword"
            android:layout_centerInParent="true"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:imeOptions="actionGo"
            android:inputType="textPassword" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="15dp"
            android:paddingEnd="10dp"
            android:paddingStart="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:background="@android:color/transparent"
                android:text="@string/register"
                android:textSize="12sp"
                android:layout_centerVertical="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:text="@string/loginButton"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
