<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_drawable"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/images_layout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
    
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/first_image"
            android:padding="2dp"
            android:background="@drawable/image_drawable"
            android:contentDescription="@null"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/second_image"
            android:padding="2dp"
            android:background="@drawable/image_drawable"
            android:layout_marginStart="10dp"
            android:contentDescription="@null"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verifying"
        android:padding="20dp"
        android:layout_below="@+id/images_layout"
        android:text="@string/veryfying"
        android:textStyle="bold"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/verifying"
        android:gravity="center">
    
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yes_button"
            android:background="@android:color/transparent"
            android:src="@mipmap/yes"
            android:layout_marginEnd="5dp"
            android:text="@string/yes"
            android:contentDescription="@null"
            style="@null"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_button"
            android:src="@mipmap/no"
            android:text="@string/no"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            android:contentDescription="@null"
            style="@null"/>

    </LinearLayout>

</RelativeLayout>
    